--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.3",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "html5-qrcode": "^2.3.8",
